[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "solana-net-shaper"
description = "The solana cluster network shaping tool"
version = "1.8.14"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
publish = false

[dependencies]
clap = "2.33.1"
serde = "1.0.122"
serde_json = "1.0.56"
solana-clap-utils = { git = "https://github.com/solindex/clap-utils.git", version = "=1.8.14" }
solana-logger = { git = "https://github.com/solindex/logger.git", version = "=1.8.14" }
rand = "0.7.0"

[[bin]]
name = "solana-net-shaper"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
